set text buttons to no-drag

--- a/rectangle.html
+++ b/rectangle.html
@@ -36,7 +36,7 @@
             <line class="modal-svg-line" x1="0" y1="80%" x2="100%" y2="80%"></line>
         </svg>
         <h1 data-modal="project-1" class="modal-close fa fa-3x fa-times" aria-hidden="true"></h1>
-        <img src="./assets/girl-no-hand.png" id="modal-girl-image" class="modal-girl-image">
+        <img src="./assets/girl-no-hand.png" id="modal-girl-image" class="modal-girl-image" draggable="false" />
         <div class="modal-content">
             <div class="modal-space-stars modal-space"></div>
             <div class="modal-space-twinkling modal-space"></div>
@@ -45,7 +45,7 @@
             <div class="modal-comet modal-comet-3"></div>
             <div class="modal-comet modal-comet-4"></div>
         </div>
-        <img id="modal-handle" class="modal-handle" src="./assets/girl-hand.png" />
+        <img id="modal-handle" class="modal-handle" src="./assets/girl-hand.png" draggable="false" />
         <div id="modal-slider" class="modal-slider"></div>
     </div>
 
@@ -61,10 +61,10 @@
 
     <div id="parallax-wrapper" class="rect-box">
         <div id="hand-despair" class="fade-in parallax hand hand-despair" data-speed="3.2">
-            <img class="hand-image-despair" src="./assets/hand-despair.png">
+            <img class="hand-image-despair" src="./assets/hand-despair.png" draggable="false">
         </div>
         <div id="hand-help" class="parallax hand hand-help" data-revert="true" data-speed="1.6">
-            <img class="hand-image-help" src="./assets/hand-help.png">
+            <img class="hand-image-help" src="./assets/hand-help.png" draggable="false">
         </div>
         <div id="rect-menu-container" class="rect-menu-container">
             <h1 id="rect-previous" class="rect-previous">Previous</h1>
