added graphic svg for moving handle, added opening/closing the flashlight

--- a/rectangle.html
+++ b/rectangle.html
@@ -46,6 +46,7 @@
             <div class="modal-comet modal-comet-4"></div>
         </div>
         <img id="modal-handle" class="modal-handle" src="./assets/girl-hand.png" draggable="false" />
+        <div id="modal-arrow" class="modal-arrow"></div>
         <div id="modal-slider" class="modal-slider"></div>
     </div>
 
