nicely transitioning between projects menu and project

--- a/rectangle.html
+++ b/rectangle.html
@@ -44,9 +44,13 @@
             <div class="modal-comet modal-comet-2"></div>
             <div class="modal-comet modal-comet-3"></div>
             <div class="modal-comet modal-comet-4"></div>
+            <div id="modal-project" class="modal-project">
+                <img class="modal-project-image" src="./assets/portal/portal-game.png" />
+                <h1 class="modal-project-title">AWGE</h1>
+            </div>
         </div>
+        <img id="modal-arrow" class="modal-arrow" src="./assets/arrows.png" draggable="false" />
         <img id="modal-handle" class="modal-handle" src="./assets/girl-hand.png" draggable="false" />
-        <div id="modal-arrow" class="modal-arrow"></div>
         <div id="modal-slider" class="modal-slider"></div>
     </div>
 
