update scss workflow + info

--- a/rectangle.html
+++ b/rectangle.html
@@ -3,7 +3,7 @@
 <head>
     <title>alex shortt</title>
 
-    <link rel="stylesheet" type="text/css" href="css/rectangle/rectangle.css">
+    <link rel="stylesheet" type="text/css" href="css/rectangle/rectangle.min.css">
     <link rel="stylesheet" type="text/css" href="css/external/roundslider.min.css">
 
     <script src="https://use.fontawesome.com/27cf0ad925.js"></script>
@@ -95,11 +95,11 @@
                         <div class="about-desc">
                             <h3 class="about-desc-text">Alex Shortt</h3>
                             <hr />
-                            <h3 class="about-desc-text">17 years old</h3>
+                            <h3 class="about-desc-text">18 years old</h3>
                             <hr />
-                            <h3 class="about-desc-text">Senior at Bellarmine College Prep</h3>
+                            <h3 class="about-desc-text">UC Santa Barbara '22</h3>
                             <hr />
-                            <h3 class="about-desc-text">Bay Area</h3>
+                            <h3 class="about-desc-text">Bay Area / Santa Barbara</h3>
                         </div>
                     </div>
                     <div class="menu-about-carousel-page">
@@ -115,7 +115,7 @@
                         <div class="about-desc">
                             <h3 class="about-list">HTML/CSS</h3>
                             <h3 class="about-list">JS/jQuery</h3>
-                            <h3 class="about-list">SASS/SCSS/LESS</h3>
+                            <h3 class="about-list">Sass/Scss/Less</h3>
                             <h3 class="about-list">React</h3>
                             <h3 class="about-list">Stripe</h3>
                             <h3 class="about-list">Shopify</h3>
