add gallery w/ ideas, to be filled in later

--- a/rectangle.html
+++ b/rectangle.html
@@ -79,6 +79,7 @@
             <div id="menu-nav" class="rect-menu menu-nav">
                 <h1 id="menu-nav-projects" class="menu-nav-option">Projects</h1>
                 <h1 id="menu-nav-about" class="menu-nav-option">About</h1>
+                <h1 id="menu-nav-gallery" class="menu-nav-option">Gallery</h1>
                 <h1 id="menu-nav-message" class="menu-nav-option">Message</h1>
                 <h1 id="menu-nav-social" class="menu-nav-option">Social</h1>
             </div>
@@ -161,6 +162,14 @@
                     <i id="about-page-up" class="menu-about-arrow-button fa fa-arrow-circle-up" aria-hidden="true"></i>
                     <i id="about-page-down" class="menu-about-arrow-button fa fa-arrow-circle-down" aria-hidden="true"></i>
                 </div>
+            </div>
+            <div id="menu-gallery" class="rect-menu menu-gallery">
+                Gallery
+                <!-- 3d Models + light interaction -->
+                  <!-- https://www.turbosquid.com/3d-models/free-obj-model-sculpture-venus-milo-aphrodite/1093053 -->
+                  <!-- https://www.turbosquid.com/3d-models/scan-statue-nymph-preparing-obj-free/942377 -->
+                <!-- Tube TV with light controls / crazy effects -->
+                <!-- the girl w/ flashlight // good because of static rect size -->
             </div>
             <div id="menu-social" class="rect-menu menu-social">
                 <div class="menu-social-option">
