first draft of working book with correct colors

--- a/rectangle.html
+++ b/rectangle.html
@@ -64,8 +64,47 @@
               clicking it goes to the end with new image/whatever somehow thing -->
         <!--  animate legs swinging back/forth, remove top and maybe bottom? idk -->
         <!-- Projects: AWGE, AWGE Forums, Revenge x Storm ?, Nessly, Pia Mia, SoundDown, Portal Gun Mod -->
+        <ul class="book-align">
+          <li>
+            <figure class='book'>
 
+              <!-- Front -->
 
+              <ul class='book-cover-front'>
+                <li>
+                  <div class="coverDesign blue">
+                    <h1>CSS</h1>
+                    <p>BOOK</p>
+                  </div>
+                </li>
+                <li></li>
+              </ul>
+
+              <!-- Pages -->
+
+              <ul class='book-page'>
+                <li></li>
+                <li>
+                  <a class="btn" href="#">Download</a>
+                </li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+
+              <!-- Back -->
+
+              <ul class='book-cover-back'>
+                <li></li>
+                <li></li>
+              </ul>
+              <ul class='book-spine'>
+                <li></li>
+                <li></li>
+              </ul>
+            </figure>
+          </li>
+        </ul>
       </div>
       <div id="menu-about" class="rect-menu menu-about">
         <div class="stars"></div>
