cleanup book styles

--- a/rectangle.html
+++ b/rectangle.html
@@ -66,7 +66,7 @@
         <!-- Projects: AWGE, AWGE Forums, Revenge x Storm ?, Nessly, Pia Mia, SoundDown, Portal Gun Mod -->
         <ul class="book-align">
           <li>
-            <figure class='book'>
+            <div class='book'>
 
               <!-- Front -->
 
@@ -95,14 +95,23 @@
               <!-- Back -->
 
               <ul class='book-cover-back'>
-                <li></li>
+                <li>
+                  <div class="book-cover-back-content">
+                    <div class="modal-space-stars modal-space"></div>
+                    <div class="modal-space-twinkling modal-space"></div>
+                    <div class="modal-comet modal-comet-1"></div>
+                    <div class="modal-comet modal-comet-2"></div>
+                    <div class="modal-comet modal-comet-3"></div>
+                    <div class="modal-comet modal-comet-4"></div>
+                  </div>
+                </li>
                 <li></li>
               </ul>
               <ul class='book-spine'>
                 <li></li>
                 <li></li>
               </ul>
-            </figure>
+            </div>
           </li>
         </ul>
       </div>
