control page turns with js

--- a/rectangle.html
+++ b/rectangle.html
@@ -67,21 +67,14 @@
         <ul class="book-align">
           <li>
             <div class='book'>
-
-              <!-- Front -->
-
               <ul class='book-cover-front'>
                 <li>
-                  <div class="coverDesign blue">
-                    <h1>CSS</h1>
-                    <p>BOOK</p>
+                  <div>
+                    <p>PROJECTS</p>
                   </div>
                 </li>
                 <li></li>
               </ul>
-
-              <!-- Pages -->
-
               <ul class='book-page'>
                 <li></li>
                 <li>
@@ -91,9 +84,6 @@
                 <li></li>
                 <li></li>
               </ul>
-
-              <!-- Back -->
-
               <ul class='book-cover-back'>
                 <li>
                   <div class="book-cover-back-content">
