interactive navigation between pages, minor page styles

--- a/rectangle.html
+++ b/rectangle.html
@@ -63,7 +63,7 @@
         <!--  controls option 2: table of contents page with each project,
               clicking it goes to the end with new image/whatever somehow thing -->
         <!--  animate legs swinging back/forth, remove top and maybe bottom? idk -->
-        <!-- Projects: AWGE, AWGE Forums, Revenge x Storm ?, Nessly, Pia Mia, SoundDown, Portal Gun Mod -->
+        <!-- Projects: AWGE, AWGE Forums, Revenge x Storm ?, Nessly, Pia Mia, SoundDown, Portal Gun Mod, Jermaine Fowler -->
         <ul class="book-align">
           <li>
             <div class='book'>
@@ -76,13 +76,43 @@
                 <li></li>
               </ul>
               <ul class='book-page'>
-                <li></li>
-                <li>
-                  <a class="btn" href="#">Download</a>
+                <li class="page page-toc">
+                  <h3>Table of Contents</h3>
+                  <hr />
+                  <h4 data-page="2">AWGE</h4>
+                  <h4 data-page="3">AWGE Forums</h4>
+                  <h4 data-page="4">Revenge X Storm</h4>
+                  <h4 data-page="5">Nessly</h4>
+                  <h4 data-page="6">Pia Mia</h4>
+                  <h4 data-page="7">SoundDown</h4>
+                  <h4 data-page="8">Portal Gun Mod</h4>
+                  <h4 data-page="9">Jermaine Fowler</h4>
+                  <h4 data-page="0" class="page-back"> - back - </h4>
                 </li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li class="page">
+                  <h4 data-page="1" class="page-back"> - back - </h4>
+                </li>
+                <li class="page">
+                  <h4 data-page="1" class="page-back"> - back - </h4>
+                </li>
+                <li class="page">
+                  <h4 data-page="1" class="page-back"> - back - </h4>
+                </li>
+                <li class="page">
+                  <h4 data-page="1" class="page-back"> - back - </h4>
+                </li>
+                <li class="page">
+                  <h4 data-page="1" class="page-back"> - back - </h4>
+                </li>
+                <li class="page">
+                  <h4 data-page="1" class="page-back"> - back - </h4>
+                </li>
+                <li class="page">
+                  <h4 data-page="1" class="page-back"> - back - </h4>
+                </li>
+                <li class="page">
+                  <h4 data-page="1" class="page-back"> - back - </h4>
+                </li>
               </ul>
               <ul class='book-cover-back'>
                 <li>
