--- a/rectangle.html
+++ b/rectangle.html
@@ -5,6 +5,7 @@
 
   <link rel="stylesheet" type="text/css" href="css/rectangle/rectangle.min.css">
   <link rel="stylesheet" type="text/css" href="css/external/roundslider.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
   <script src="https://use.fontawesome.com/27cf0ad925.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
@@ -90,6 +91,27 @@
                   <h4 data-page="0" class="page-back"> - back - </h4>
                 </li>
                 <li class="page">
+                  <div class="page-content">
+                    <div class="page-content-cover">
+                      <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
+                      <h2 class="page-content-text">AWGE</h2>
+                      <a target="_blank" href="https://www.awgeshit.com" class="page-content-link fas fa-external-link-alt"></a>
+                    </div>
+                    <div class="page-content-desc">
+                      <h4>
+                        <!-- Date + brag about reach -->
+                        I built this site in August 2016, and since then it has reached over a million users and securely captured thousands of purchases.
+                        <br/>
+                        <br/>
+                        <!-- Design choices + nuance -->
+                        The site displays a consistent retro aesthetic down to the smallest detail, offering an immersive experience for the user.
+                        <br/>
+                        <br/>
+                        <!-- Function -->
+                        It offers media curated by AWGE members, a secure shop, 3d interaction with the products, and a contact form.
+                      </h4>
+                    </div>
+                  </div>
                   <h4 data-page="1" class="page-back"> - back - </h4>
                 </li>
                 <li class="page">
