small design change, add test data

--- a/rectangle.html
+++ b/rectangle.html
@@ -87,10 +87,10 @@
                   <h4 data-page="6">Pia Mia</h4>
                   <h4 data-page="7">SoundDown</h4>
                   <h4 data-page="8">Portal Gun Mod</h4>
-                  <h4 data-page="9">Jermaine Fowler</h4>
+                  <!--<h4 data-page="9">Jermaine Fowler</h4>-->
                   <h4 data-page="0" class="page-back"> - back - </h4>
                 </li>
-                <li class="page">
+                <li class="page page-awge">
                   <div class="page-content">
                     <div class="page-content-cover">
                       <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
@@ -114,25 +114,148 @@
                   </div>
                   <h4 data-page="1" class="page-back"> - back - </h4>
                 </li>
-                <li class="page">
+                <li class="page page-awge-forums">
+                  <div class="page-content">
+                    <div class="page-content-cover">
+                      <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
+                      <h2 class="page-content-text">AWGE Forums</h2>
+                      <a target="_blank" href="https://forums.awgeshit.com" class="page-content-link fas fa-external-link-alt"></a>
+                    </div>
+                    <div class="page-content-desc">
+                      <h4>
+                        <!-- Date + brag about reach -->
+                        I built this site in August 2016, and since then it has reached over a million users and securely captured thousands of purchases.
+                        <br/>
+                        <br/>
+                        <!-- Design choices + nuance -->
+                        The site displays a consistent retro aesthetic down to the smallest detail, offering an immersive experience for the user.
+                        <br/>
+                        <br/>
+                        <!-- Function -->
+                        It offers media curated by AWGE members, a secure shop, 3d interaction with the products, and a contact form.
+                      </h4>
+                    </div>
+                  </div>
                   <h4 data-page="1" class="page-back"> - back - </h4>
                 </li>
-                <li class="page">
+                <li class="page page-revenge-x-storm">
+                  <div class="page-content">
+                    <div class="page-content-cover">
+                      <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
+                      <h2 class="page-content-text">Revenge X Storm</h2>
+                      <a target="_blank" href="https://revengexstorm.com" class="page-content-link fas fa-external-link-alt"></a>
+                    </div>
+                    <div class="page-content-desc">
+                      <h4>
+                        <!-- Date + brag about reach -->
+                        I built this site in August 2016, and since then it has reached over a million users and securely captured thousands of purchases.
+                        <br/>
+                        <br/>
+                        <!-- Design choices + nuance -->
+                        The site displays a consistent retro aesthetic down to the smallest detail, offering an immersive experience for the user.
+                        <br/>
+                        <br/>
+                        <!-- Function -->
+                        It offers media curated by AWGE members, a secure shop, 3d interaction with the products, and a contact form.
+                      </h4>
+                    </div>
+                  </div>
                   <h4 data-page="1" class="page-back"> - back - </h4>
                 </li>
-                <li class="page">
+                <li class="page page-nessly">
+                  <div class="page-content">
+                    <div class="page-content-cover">
+                      <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
+                      <h2 class="page-content-text">Nessly</h2>
+                      <a target="_blank" href="https://nesslyworld.com" class="page-content-link fas fa-external-link-alt"></a>
+                    </div>
+                    <div class="page-content-desc">
+                      <h4>
+                        <!-- Date + brag about reach -->
+                        I built this site in August 2016, and since then it has reached over a million users and securely captured thousands of purchases.
+                        <br/>
+                        <br/>
+                        <!-- Design choices + nuance -->
+                        The site displays a consistent retro aesthetic down to the smallest detail, offering an immersive experience for the user.
+                        <br/>
+                        <br/>
+                        <!-- Function -->
+                        It offers media curated by AWGE members, a secure shop, 3d interaction with the products, and a contact form.
+                      </h4>
+                    </div>
+                  </div>
                   <h4 data-page="1" class="page-back"> - back - </h4>
                 </li>
-                <li class="page">
+                <li class="page page-piamia">
+                  <div class="page-content">
+                    <div class="page-content-cover">
+                      <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
+                      <h2 class="page-content-text">Pia Mia</h2>
+                      <a target="_blank" href="http://alexshortt.com/projects/piamia" class="page-content-link fas fa-external-link-alt"></a>
+                    </div>
+                    <div class="page-content-desc">
+                      <h4>
+                        <!-- Date + brag about reach -->
+                        I built this site in August 2016, and since then it has reached over a million users and securely captured thousands of purchases.
+                        <br/>
+                        <br/>
+                        <!-- Design choices + nuance -->
+                        The site displays a consistent retro aesthetic down to the smallest detail, offering an immersive experience for the user.
+                        <br/>
+                        <br/>
+                        <!-- Function -->
+                        It offers media curated by AWGE members, a secure shop, 3d interaction with the products, and a contact form.
+                      </h4>
+                    </div>
+                  </div>
                   <h4 data-page="1" class="page-back"> - back - </h4>
                 </li>
-                <li class="page">
+                <li class="page page-sounddown">
+                  <div class="page-content">
+                    <div class="page-content-cover">
+                      <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
+                      <h2 class="page-content-text">SoundDown</h2>
+                      <a target="_blank" href="https://chrome.google.com/webstore/detail/sounddown/ljjaomnfoepedhkncdffdadnpmckoohb" class="page-content-link fas fa-external-link-alt"></a>
+                    </div>
+                    <div class="page-content-desc">
+                      <h4>
+                        <!-- Date + brag about reach -->
+                        I built this site in August 2016, and since then it has reached over a million users and securely captured thousands of purchases.
+                        <br/>
+                        <br/>
+                        <!-- Design choices + nuance -->
+                        The site displays a consistent retro aesthetic down to the smallest detail, offering an immersive experience for the user.
+                        <br/>
+                        <br/>
+                        <!-- Function -->
+                        It offers media curated by AWGE members, a secure shop, 3d interaction with the products, and a contact form.
+                      </h4>
+                    </div>
+                  </div>
                   <h4 data-page="1" class="page-back"> - back - </h4>
                 </li>
-                <li class="page">
-                  <h4 data-page="1" class="page-back"> - back - </h4>
-                </li>
-                <li class="page">
+                <li class="page page-portalgun">
+                  <div class="page-content">
+                    <div class="page-content-cover">
+                      <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
+                      <h2 class="page-content-text">GTA V Portal Gun Mod</h2>
+                      <a target="_blank" href="https://www.gta5-mods.com/scripts/portal-gun-net" class="page-content-link fas fa-external-link-alt"></a>
+                    </div>
+                    <div class="page-content-desc">
+                      <h4>
+                        <!-- Date + brag about reach -->
+                        I built this site in August 2016, and since then it has reached over a million users and securely captured thousands of purchases.
+                        <br/>
+                        <br/>
+                        <!-- Design choices + nuance -->
+                        The site displays a consistent retro aesthetic down to the smallest detail, offering an immersive experience for the user.
+                        <br/>
+                        <br/>
+                        <!-- Function -->
+                        It offers media curated by AWGE members, a secure shop, 3d interaction with the products, and a contact form.
+                      </h4>
+                    </div>
+                  </div>
                   <h4 data-page="1" class="page-back"> - back - </h4>
                 </li>
               </ul>
