--- a/index.html
+++ b/index.html
@@ -262,12 +262,12 @@
               <ul class='book-cover-back'>
                 <li>
                   <div class="book-cover-back-content">
-                    <div class="modal-space-stars modal-space"></div>
-                    <div class="modal-space-twinkling modal-space"></div>
-                    <div class="modal-comet modal-comet-1"></div>
-                    <div class="modal-comet modal-comet-2"></div>
-                    <div class="modal-comet modal-comet-3"></div>
-                    <div class="modal-comet modal-comet-4"></div>
+                    <div class="deepspace-space-stars deepspace-space"></div>
+                    <div class="deepspace-space-twinkling deepspace-space"></div>
+                    <div class="deepspace-comet deepspace-comet-1"></div>
+                    <div class="deepspace-comet deepspace-comet-2"></div>
+                    <div class="deepspace-comet deepspace-comet-3"></div>
+                    <div class="deepspace-comet deepspace-comet-4"></div>
                   </div>
                 </li>
                 <li></li>
