added girl w/ parallax + saturn

--- a/index.html
+++ b/index.html
@@ -261,14 +261,16 @@
               </ul>
               <ul class='book-cover-back'>
                 <li>
-                  <div class="book-cover-back-content">
+                  <div class="backcover-content">
                     <div class="deepspace-space-stars deepspace-space"></div>
                     <div class="deepspace-space-twinkling deepspace-space"></div>
                     <div class="deepspace-comet deepspace-comet-1"></div>
                     <div class="deepspace-comet deepspace-comet-2"></div>
                     <div class="deepspace-comet deepspace-comet-3"></div>
                     <div class="deepspace-comet deepspace-comet-4"></div>
+                    <img id="backcover-saturn" class="backcover-saturn backcover-saturn-hidden" src="/assets/space/saturn.png" />
                   </div>
+                  <img id="backcover-girl" class="parallax backcover-girl hidden" data-speed="0.5" src="/assets/space/girl.png" />
                 </li>
                 <li></li>
               </ul>
