--- a/index.html
+++ b/index.html
@@ -93,9 +93,16 @@
                 <li class="page page-awge">
                   <div class="page-content">
                     <div class="page-content-cover">
+                      <div class="page-content-cover-dir">
+                        <div class="page-content-cover-left action-prev"></div>
+                        <div class="page-content-cover-right action-next"></div>
+                      </div>
                       <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
                       <h2 class="page-content-text">AWGE</h2>
-                      <a target="_blank" href="https://www.awgeshit.com" class="page-content-link fas fa-external-link-alt"></a>
+                    </div>
+                    <div class="page-content-actions">
+                      <h3 class="page-content-action action-gallery">gallery</h3>
+                      <h3 class="page-content-action action-visit" data-link="https://www.awgeshit.com">visit</h3>
                     </div>
                     <div class="page-content-desc">
                       <h4>
