--- a/index.html
+++ b/index.html
@@ -97,7 +97,15 @@
                         <div class="page-content-cover-left action-prev"></div>
                         <div class="page-content-cover-right action-next"></div>
                       </div>
-                      <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
+                      <div class="page-content-gallerymask">
+                        <div id="gallery" class="page-content-gallery">
+                          <img class="page-content-image" src="/assets/projects/awge/awge-landing.PNG" />
+                          <img class="page-content-image" src="/assets/projects/awge/awge-home.PNG" />
+                          <img class="page-content-image" src="/assets/projects/awge/awge-shop.PNG" />
+                          <img class="page-content-image" src="/assets/projects/awge/awge-videos.PNG" />
+                          <img class="page-content-image" src="/assets/projects/awge/awge-contact.PNG" />
+                        </div>
+                      </div>
                       <h2 class="page-content-text">AWGE</h2>
                     </div>
                     <div class="page-content-actions">
